--- a/config.yml
+++ b/config.yml
@@ -3,12 +3,10 @@ data:
         id: P2YAQ80HI1TYGXJISCUD
         listenport: "9001"
         targets:
-            - 0.0.0.0:9002
-            - 0.0.0.0:9003
+            - localhost:80
     routing:
         routes:
             - route-a
-            - route-b
-        terminator: true
+        terminator: false
     settings:
-        interval: 500ms
+        interval: 3s
